Commenting the code for better understanding