@@ -16,7 +16,6 @@ import org.springframework.http.HttpStatus;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,7 +23,11 @@ public class ChromosomeServiceImpl implements IChromosomeService {
 
     private final ChromosomeRepository chromosomeRepository;
     private final GenomeRepository genomeRepository;
-
+    /**
+     * Crear un nuevo Chromosome asociado a un Genome existente.
+     * @param chromosomeInDTO Datos de entrada para crear el Chromosome.
+     * @return Datos de salida del Chromosome creado.
+     */
     @Override
     @Transactional
     public ChromosomeOutDTO crearChromosome(ChromosomeInDTO chromosomeInDTO) {
@@ -46,34 +49,49 @@ public class ChromosomeServiceImpl implements IChromosomeService {
         chromosome.setName(chromosomeInDTO.getName());
         chromosome.setLength(chromosomeInDTO.getLength());
         chromosome.setSequence(chromosomeInDTO.getSequence());
-
         Chromosome savedChromosome = chromosomeRepository.save(chromosome);
         return convertToOutDTO(savedChromosome);
     }
-
+    /**
+     * Obtener todos los Chromosomes.
+     * @return Lista de todos los Chromosomes.
+     */
     @Override
     @Transactional(readOnly = true)
     public List<ChromosomeOutDTO> obtenerTodosChromosomes() {
         return chromosomeRepository.findAll().stream()
                 .map(this::convertToOutDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-
+    /**
+     * Obtener todos los Chromosomes por Genome ID.
+     * @param genomeId ID del Genome.
+     * @return Lista de Chromosomes asociados al Genome.
+     */
     @Override
     @Transactional(readOnly = true)
     public List<ChromosomeOutDTO> obtenerChromosomesPorGenome(Long genomeId) {
         return chromosomeRepository.findByGenomeId(genomeId).stream()
                 .map(this::convertToOutDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-
+    /**
+     * Obtener un Chromosome por ID.
+     * @param id ID del Chromosome.
+     * @return Chromosome encontrado si existe.
+     */
     @Override
     @Transactional(readOnly = true)
     public Optional<ChromosomeOutDTO> obtenerChromosomePorId(Long id) {
         return chromosomeRepository.findById(id)
                 .map(this::convertToOutDTO);
     }
-
+    /**
+     * Actualizar un Chromosome existente.
+     * @param id ID del Chromosome a actualizar.
+     * @param chromosomeUpdateDTO Datos de actualización del Chromosome.
+     * @return Chromosome actualizado si existe.
+     */
     @Override
     @Transactional
     public Optional<ChromosomeOutDTO> actualizarChromosome(Long id, ChromosomeUpdateDTO chromosomeUpdateDTO) {
@@ -94,7 +112,11 @@ public class ChromosomeServiceImpl implements IChromosomeService {
             return convertToOutDTO(updatedChromosome);
         });
     }
-
+    /**
+     * Eliminar un Chromosome por su ID.
+     * @param id ID del Chromosome a eliminar.
+     * @return true si el Chromosome fue eliminado, false si no se encontró.
+     */
     @Override
     @Transactional
     public boolean eliminarChromosome(Long id) {
@@ -104,14 +126,24 @@ public class ChromosomeServiceImpl implements IChromosomeService {
         }
         return false;
     }
-
+    /**
+     * Obtener la secuencia completa de un Chromosome.
+     * @param chromosomeId ID del Chromosome.
+     * @return Secuencia completa si el Chromosome existe.
+     */
     @Override
     @Transactional(readOnly = true)
     public Optional<String> obtenerSecuenciaCompleta(Long chromosomeId) {
         return chromosomeRepository.findById(chromosomeId)
                 .map(Chromosome::getSequence);
     }
-
+    /**
+     * Obtener una subsequence de un Chromosome dado un rango.
+     * @param chromosomeId ID del Chromosome.
+     * @param start Posición inicial (inclusive).
+     * @param end Posición final (exclusive).
+     * @return Secuencia en el rango especificado si el Chromosome existe.
+     */
     @Override
     @Transactional(readOnly = true)
     public Optional<String> obtenerSecuenciaPorRango(Long chromosomeId, Integer start, Integer end) {
@@ -128,7 +160,12 @@ public class ChromosomeServiceImpl implements IChromosomeService {
             return sequence.substring(start, end);
         });
     }
-
+    /**
+     * Actualizar la secuencia de un Chromosome.
+     * @param chromosomeId ID del Chromosome.
+     * @param sequence Nueva secuencia para el Chromosome.
+     * @return Datos de salida del Chromosome actualizado si se encuentra, opcionalmente.
+     */
     @Override
     @Transactional
     public Optional<ChromosomeOutDTO> actualizarSecuencia(Long chromosomeId, String sequence) {
@@ -142,7 +179,11 @@ public class ChromosomeServiceImpl implements IChromosomeService {
             return convertToOutDTO(updatedChromosome);
         });
     }
-
+    /**
+     * Convertir una entidad Chromosome a ChromosomeOutDTO.
+     * @param chromosome Entidad Chromosome.
+     * @return DTO de salida ChromosomeOutDTO.
+     */
     private ChromosomeOutDTO convertToOutDTO(Chromosome chromosome) {
         ChromosomeOutDTO dto = new ChromosomeOutDTO();
         dto.setId(chromosome.getId());
