@@ -13,14 +13,17 @@ import org.springframework.http.HttpStatus;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class FunctionServiceImpl implements IFunctionService {
 
     private final FunctionRepository functionRepository;
-
+    /**
+     * Crear una nueva Function.
+     * @param functionInDTO Datos de entrada para crear la Function.
+     * @return Datos de salida de la Function creada.
+     */
     @Override
     @Transactional
     public FunctionOutDTO crearFunction(FunctionInDTO functionInDTO) {
@@ -39,38 +42,58 @@ public class FunctionServiceImpl implements IFunctionService {
         Function savedFunction = functionRepository.save(function);
         return convertToOutDTO(savedFunction);
     }
-
+    /**
+     * Obtener todas las Functions.
+     * @return Lista de todas las Functions.
+     */
     @Override
     @Transactional(readOnly = true)
     public List<FunctionOutDTO> obtenerTodasFunctions() {
         return functionRepository.findAll().stream()
                 .map(this::convertToOutDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-
+    /**
+     * Obtener todas las Functions por código.
+     * @param code Código de la Function.
+     * @return Lista de Functions que contienen el código especificado.
+     */
     @Override
     @Transactional(readOnly = true)
     public List<FunctionOutDTO> obtenerFunctionsPorCode(String code) {
         return functionRepository.findByCodeContainingIgnoreCase(code).stream()
                 .map(this::convertToOutDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-
+    /**
+     * Obtener todas las Functions por categoría.
+     * @param category Categoría de la Function.
+     * @return Lista de Functions en la categoría especificada.
+     */
     @Override
     @Transactional(readOnly = true)
     public List<FunctionOutDTO> obtenerFunctionsPorCategory(Category category) {
         return functionRepository.findByCategory(category).stream()
                 .map(this::convertToOutDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-
+    /**
+     * Obtener una Function por ID.
+     * @param id ID de la Function.
+     * @return Function encontrada si existe.
+     */
     @Override
     @Transactional(readOnly = true)
     public Optional<FunctionOutDTO> obtenerFunctionPorId(Long id) {
         return functionRepository.findById(id)
                 .map(this::convertToOutDTO);
     }
-
+    /**
+     * Actualizar una Function existente.
+     * @param id ID de la Function a actualizar.
+     * @param functionUpdateDTO Datos de actualización de la Function.
+     * @return Function actualizada si existe.
+     */
     @Override
     @Transactional
     public Optional<FunctionOutDTO> actualizarFunction(Long id, FunctionUpdateDTO functionUpdateDTO) {
@@ -97,7 +120,11 @@ public class FunctionServiceImpl implements IFunctionService {
             return convertToOutDTO(updatedFunction);
         });
     }
-
+    /**
+     * Eliminar una Function por ID.
+     * @param id ID de la Function a eliminar.
+     * @return true si la Function fue eliminada, false si no existe.
+     */
     @Override
     @Transactional
     public boolean eliminarFunction(Long id) {
@@ -107,7 +134,11 @@ public class FunctionServiceImpl implements IFunctionService {
         }
         return false;
     }
-
+    /**
+     * Convierte una entidad Function a un DTO de salida FunctionOutDTO.
+     * @param function Entidad Function.
+     * @return DTO de salida FunctionOutDTO.
+     */
     private FunctionOutDTO convertToOutDTO(Function function) {
         FunctionOutDTO dto = new FunctionOutDTO();
         dto.setId(function.getId());
