@@ -13,9 +13,9 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 import org.springframework.http.HttpStatus;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,7 +23,11 @@ public class GenomeServiceImpl implements IGenomeService {
 
     private final GenomeRepository genomeRepository;
     private final SpeciesRepository speciesRepository;
-
+    /**
+     * Crear un nuevo Genome asociado a una Species existente.
+     * @param genomeInDTO Datos de entrada para crear el Genome.
+     * @return Datos de salida del Genome creado.
+     */
     @Override
     @Transactional
     public GenomeOutDTO crearGenome(GenomeInDTO genomeInDTO) {
@@ -35,34 +39,51 @@ public class GenomeServiceImpl implements IGenomeService {
         genome.setSpecies(species);
         genome.setVersion(genomeInDTO.getVersion());
         genome.setDescription(genomeInDTO.getDescription());
+        genome.setCreatedAt(LocalDateTime.now());
 
         Genome savedGenome = genomeRepository.save(genome);
         return convertToOutDTO(savedGenome);
     }
-
+    /**
+     * Obtener todos los Genomes.
+     * @return Lista de todas los Genomes.
+     */
     @Override
     @Transactional(readOnly = true)
     public List<GenomeOutDTO> obtenerTodosGenomes() {
         return genomeRepository.findAll().stream()
                 .map(this::convertToOutDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-
+    /**
+     * Obtener todos los Genomes por Species ID.
+     * @param speciesId ID de la Species.
+     * @return Lista de Genomes asociados a la Species.
+     */
     @Override
     @Transactional(readOnly = true)
     public List<GenomeOutDTO> obtenerGenomesPorSpecies(Long speciesId) {
         return genomeRepository.findBySpeciesId(speciesId).stream()
                 .map(this::convertToOutDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-
+    /**
+     * Obtener un Genome por ID.
+     * @param id ID del Genome.
+     * @return Genome encontrado si existe.
+     */
     @Override
     @Transactional(readOnly = true)
     public Optional<GenomeOutDTO> obtenerGenomePorId(Long id) {
         return genomeRepository.findById(id)
                 .map(this::convertToOutDTO);
     }
-
+    /**
+     * Actualizar un Genome existente.
+     * @param id ID del Genome a actualizar.
+     * @param genomeUpdateDTO Datos de actualización del Genome.
+     * @return Genome actualizado si existe.
+     */
     @Override
     @Transactional
     public Optional<GenomeOutDTO> actualizarGenome(Long id, GenomeUpdateDTO genomeUpdateDTO) {
@@ -83,7 +104,11 @@ public class GenomeServiceImpl implements IGenomeService {
             return convertToOutDTO(updatedGenome);
         });
     }
-
+    /**
+     * Eliminar un Genome por ID.
+     * @param id ID del Genome a eliminar.
+     * @return true si el Genome fue eliminado, false si no existe.
+     */
     @Override
     @Transactional
     public boolean eliminarGenome(Long id) {
@@ -93,7 +118,11 @@ public class GenomeServiceImpl implements IGenomeService {
         }
         return false;
     }
-
+    /**
+     * Convertir una entidad Genome a GenomeOutDTO.
+     * @param genome Entidad Genome.
+     * @return DTO de salida GenomeOutDTO.
+     **/
     private GenomeOutDTO convertToOutDTO(Genome genome) {
         GenomeOutDTO dto = new GenomeOutDTO();
         dto.setId(genome.getId());
